--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng deploy --base-href=/drivetrain-builder/ --no-silent --name=kylecorry31 --email=kylecorry31@gmail.com"
+    "deploy": "ng build --prod --output-path docs --base-href /drivetrain-builder/"
   },
   "private": true,
   "dependencies": {
